format Curitiba - PR and prevent wrapping of contato title

--- a/style.css
+++ b/style.css
@@ -647,6 +647,11 @@ section {
   background-color: var(--preto-principal);
 }
 
+.contato-info h2 {
+  white-space: nowrap;
+  font-size: clamp(1.2rem, 4.8vw, 2.5rem);
+}
+
 .contato-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
